docs(coverage): add language quickref to prompt-implementation.md
The application-test-coverage workflow handles Java/Maven, Python/pytest,
JS/jest, and Go/test, but the per-stack commands and gotchas were interleaved
in the prompt body. A reader had to scroll past all 4 languages to find what
applied to their stack.

Add a 'Language Quickref' section at the top of prompt-implementation.md with:
  - Per-stack table: detect via / build-test command / coverage tool / test path / common gotcha
  - Per-stack env validation (Phase 0.5 pre-flight)
  - Per-stack testability classification
  - Per-stack coverage provenance

The table sits ABOVE the ```text fenced prompt body, so it renders as
Markdown without being part of the literal prompt text. Zero new files, 34
lines added, 0 deletions.

This is a docs-only change, no spec/behavior modification. Future sub-agent
task prompts can reference the relevant quickref row instead of inlining the
full command (PR #8 lesson 1).